data/derived/comb/progs/unify/prog3199.ml.out
Characters 58-67:
  let (_, res) = (0;[0;0;0;0]) in
                    ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
